# JNP3-asteroid-destroyer

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
src/common/: Singleton.h  constants.h  utils.h
src/engine/: Animator.h  AnimatorSequence.h  Asteroid.cpp  Asteroid.h  AsteroidDebris.cpp  AsteroidDebris.h  AsteroidsSpawnDelayer.h  Bullet.h  CircleCollider.h  Engine.cpp  Engine.h  Explosion.cpp  Explosion.h  GameObject.h  Input.h  Movable.h  Player.cpp  Player.h  Sprite.h  Timer.h  Vec2.h  utils.h
src/tests/: engine-run-test.cpp  visuals-run-test.cpp
src/visuals/: BaseWindow.h  BitmapNames.h  BitmapsManager.cpp  BitmapsManager.h  ExplosionPath.h  LinearGradientBrush.h  MainWindow.cpp  MainWindow.h  TextWriter.cpp  TextWriter.h  paths.h  utils.h  windows_h.h
src/visuals/gradientBrushes/: LinearGradientBrush1.h  LinearGradientBrush2.h  RadialGradientBrush1.h
